--- a/app/app.css
+++ b/app/app.css
@@ -1,3 +1,16 @@
-body{
-  padding-top: 50px;
+body {
+    padding-top: 50px;
+}
+
+.label {
+    margin: 0 2px;
+    cursor: pointer;
+}
+
+.label:hover {
+    background-color: hsl(0, 0%, 30%);
+}
+
+#search-results .question-title {
+    text-decoration: none;
 }
